style.css
.main-container
{
  box-shadow: -10px 10px 100px 50px rgba(0, 0, 0, 0.2);
  width:auto;
  margin-left:10%;
  margin-right:10%;
  dispaly:flex;
  flex-direction: column;
  background-color:#EAEAEA;
}
.main-container .head
{
  background-color:#8ba4f7;
  display:flex;
  flex-direction: column;
  height:450px;

}
.main-container .head .nav
{
  border:1px solid black;
  display:flex;
  flex-direction: row;
  height:80px;
  width:auto;
}
.main-container .head .nav .logo
{
  height:80px;
  width:80px;
}
.main-container .head .nav .links
{
  text-align:center;
  height: 80px;
  width:85.5%;
  margin-left:2%;
}
.main-container .head .body
{

  display:flex;
  flex-direction: row;
  width: 85%;
  margin-left:7.5%;
  height:100%;
}
.main-container .head .body .logo-large
{
  width:auto;
  height:100%;
}
.main-container .head .body .info
{
  display:flex;
  flex-direction: column;
  width:100%;
  height:100%;

}
.main-container .head .body .info .name
{
  width:100%;
  height:30%;
  padding-top:5%;
}
.main-container .head .body .info .name .title
{
  margin-left:5%;
  width:900px;
  height:auto;
}
.img-nav
{
  height:75px;
  margin-left:10%;
  height:90px;
  width:auto;
}
.img-logo-largeead .body .info .tagline
{
  height:70%;
  width:100%;
}
.main-container .about
{
  box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.1);
  background-color:#fdf8e0;
  height:auto;
  width:auto;
}
.main-container .donate
{

  height:auto;
  width:auto;
}
.main-container .location
{
  padding-top:10px;
  background-color:#fdf8e0;
  height:250px;
  width:auto;
}
.img-logo
{
  height:80px;
  width:auto;
}
.img-nav
{
  margin-left:10%;
  height:90px;
  width:auto;
}
.img-logo-large
{
  height:auto;
  width:325px;
}
.tagline-style
{
  font-family: 'Roboto', sans-serif;
  color:black;
  text-align: center;
}
.post-style
{
  width:80%;
  margin-left:10%;
  font-family: 'Roboto', sans-serif;
}
.post-title
{
  height:60px;
  border-bottom: 2px solid black;
}
.mission-content
{
  display:flex;
  flex-direction: row;
  height:auto;
  width:80%;
  margin-left:10%;
  padding-bottom:10px;
}
.mission-content div
{
  margin:auto;
  margin-top:10px;
  height:auto;
  width:auto;
}
.mission-content .img
{
  border:1px solid black;
  width:auto;
  height:350px;
}
.donate-content
{
  display:flex;
  flex-direction: row;
  height:auto;
  width:80%;
  margin-left:10%;
  padding-bottom:10px;
}
.donate-content div
{
  margin:auto;
  margin-top:10px;
  height:auto;
  width:auto;
}
.donate-content .img
{
  border:1px solid black;
  width:auto;
  height:350px;
}

#about-us
{
  font-family:sans-serif;
  font-weight: bolder;
  font-size: 36px;
  text-align:center;
}
#donate
{
  margin-top:10px;
  font-family:sans-serif;
  font-weight: bolder;
  font-size: 36px;
  text-align:center;
}
#location
{
  font-family:sans-serif;
  font-weight: bolder;
  font-size: 36px;
  text-align:center;
}

